namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-edmi-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-edmi-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_electronic_monitoring_digital_insights_dev"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Electronic Monitoring Data Insights: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-edmi-prototype"
    cloud-platform.justice.gov.uk/team-name: "hmpps-em-probation"
    cloud-platform.justice.gov.uk/review-after: ""
